--- a/styles.css
+++ b/styles.css
@@ -162,26 +162,10 @@ a.social {
 }
 
 a.social:hover {
-  color: orange;
+  color: #6633ff;
   opacity: 1;
 }
 
-/* FINISH THE SOCIAL MEDIA LINKS with Font Awesome icons that change color on hover -1-6-20
-a.twitter {
-  background-image: url(images/twitter.svg);
-}
-a.linkedin {
-  background-image: url(images/linkedin.svg);
-}
-a.github {
-  background-image: url(images/github.svg);
-}
-a.social:hover {
-  opacity: 1;
-}
-.clearfix {
-  clear: both;
-}*/
 
 /* Styles for larger screens */
 @media screen and (min-width: 720px) {
